; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_card.c_CARD_Unmount.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_card.c_CARD_Unmount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXI_CHANNEL_0 = common dso_local global i64 0, align 8
@EXI_CHANNEL_2 = common dso_local global i64 0, align 8
@CARD_ERROR_NOCARD = common dso_local global i64 0, align 8
@CARD_ERROR_READY = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @CARD_Unmount(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  store i32* null, i32** %5, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @EXI_CHANNEL_0, align 8
  %8 = icmp slt i64 %6, %7
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @EXI_CHANNEL_2, align 8
  %12 = icmp sge i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %9, %1
  %14 = load i64, i64* @CARD_ERROR_NOCARD, align 8
  store i64 %14, i64* %2, align 8
  br label %26

15:                                               ; preds = %9
  %16 = load i64, i64* %3, align 8
  %17 = call i64 @__card_getcntrlblock(i64 %16, i32** %5)
  store i64 %17, i64* %4, align 8
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = load i64, i64* @CARD_ERROR_NOCARD, align 8
  store i64 %20, i64* %4, align 8
  br label %21

21:                                               ; preds = %19, %15
  %22 = load i64, i64* %3, align 8
  %23 = load i64, i64* %4, align 8
  %24 = call i32 @__card_dounmount(i64 %22, i64 %23)
  %25 = load i64, i64* @CARD_ERROR_READY, align 8
  store i64 %25, i64* %2, align 8
  br label %26

26:                                               ; preds = %21, %13
  %27 = load i64, i64* %2, align 8
  ret i64 %27
}

declare dso_local i64 @__card_getcntrlblock(i64, i32**) #1

declare dso_local i32 @__card_dounmount(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
